--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'io.r2dbc:r2dbc-h2:1.0.0.RELEASE'
 	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.8.0'
+	implementation 'org.mapstruct:mapstruct:1.6.3'
+	annotationProcessor  'org.mapstruct:mapstruct-processor:1.6.3'
 
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.28'
 
