--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,9 @@ spring:
   h2:
     console:
       enabled: true
+  web-flux:
+    base-path: /api/v1/
+management:
+  endpoints:
+    web:
+      base-path: actuator
