fix: Added jar enabled for use only not plain jar

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,13 @@ plugins {
 	id 'org.openapi.generator' version "7.12.0"
 }
 
+bootJar {
+	enabled = true
+}
+jar {
+	enabled = false
+}
+
 group = 'com.pichincha.exam'
 version = '0.0.1-SNAPSHOT'
 
