--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka:4.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation 'io.r2dbc:r2dbc-h2:1.0.0.RELEASE'
 	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.8.0'
