--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -33,3 +33,7 @@ management:
   endpoints:
     web:
       base-path: actuator
+logging:
+  config: classpath:logback.xml
+  level:
+    root: INFO
